// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultNameHeaderCell paddingStyle - should render with compact 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  />
</div>
`;

exports[`ResultNameHeaderCell paddingStyle - should render with none 1`] = `
<div
  className="clinical-result-name-header-cell"
>
  <div
    className="name"
  />
</div>
`;

exports[`ResultNameHeaderCell paddingStyle - should render with standard 1`] = `
<div
  className="clinical-result-name-header-cell padding-standard"
>
  <div
    className="name"
  />
</div>
`;

exports[`ResultNameHeaderCell should render 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  />
</div>
`;

exports[`ResultNameHeaderCell should render a result name 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  >
    Name
  </div>
</div>
`;

exports[`ResultNameHeaderCell should render a unit 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  />
  <div
    className="unit"
  >
    Unit
  </div>
</div>
`;

exports[`ResultNameHeaderCell typeIndicator - should render with calculated 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  >
    <IconCalculator
      className="icon-rowindicator"
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;

exports[`ResultNameHeaderCell typeIndicator - should render with none 1`] = `
<div
  className="clinical-result-name-header-cell padding-compact"
>
  <div
    className="name"
  />
</div>
`;
